--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10839,36 +10839,37 @@ keys:
               type: bool
             missing_policy:
               type: dict
-              description: Missing policy override configuration.
+              description: Missing policy configuration.
               keys:
                 direction_in:
                   description: Missing policy inbound direction.
                   type: dict
                   keys:
                     action:
-                      description: Missing policy action options.
+                      description: Missing policy action.
                       type: str
                       required: true
                       valid_values:
                       - deny
                       - permit
+                      - deny-in-out
                     include_community_list:
                       type: bool
-                      description: Include community list references in missing policy
+                      description: Include community-list references in missing policy
                         decision.
                     include_prefix_list:
                       type: bool
-                      description: Include prefix list references in missing policy
+                      description: Include prefix-list references in missing policy
                         decision.
                     include_sub_route_map:
                       type: bool
-                      description: Include sub route map references in missing policy
+                      description: Include sub-route-map references in missing policy
                         decision.
                     address_family_all:
-                      description: Include all address families for missing policy
+                      description: Include all address-families for missing policy
                         configuration.
                       type: bool
-                      required: true
+                      default: true
                       valid_values:
                       - true
                 direction_out:
@@ -10876,29 +10877,30 @@ keys:
                   type: dict
                   keys:
                     action:
-                      description: Missing policy action options.
+                      description: Missing policy action.
                       type: str
                       required: true
                       valid_values:
                       - deny
                       - permit
+                      - deny-in-out
                     include_community_list:
                       type: bool
-                      description: Include community list references in missing policy
+                      description: Include community-list references in missing policy
                         decision.
                     include_prefix_list:
                       type: bool
-                      description: Include prefix list references in missing policy
+                      description: Include prefix-list references in missing policy
                         decision.
                     include_sub_route_map:
                       type: bool
-                      description: Include sub route map references in missing policy
+                      description: Include sub-route-map references in missing policy
                         decision.
                     address_family_all:
-                      description: Include all address families for missing policy
+                      description: Include all address-families for missing policy
                         configuration.
                       type: bool
-                      required: true
+                      default: true
                       valid_values:
                       - true
             link_bandwidth:
@@ -11119,36 +11121,37 @@ keys:
               type: bool
             missing_policy:
               type: dict
-              description: Missing policy override configuration.
+              description: Missing policy configuration.
               keys:
                 direction_in:
                   description: Missing policy inbound direction.
                   type: dict
                   keys:
                     action:
-                      description: Missing policy action options.
+                      description: Missing policy action.
                       type: str
                       required: true
                       valid_values:
                       - deny
                       - permit
+                      - deny-in-out
                     include_community_list:
                       type: bool
-                      description: Include community list references in missing policy
+                      description: Include community-list references in missing policy
                         decision.
                     include_prefix_list:
                       type: bool
-                      description: Include prefix list references in missing policy
+                      description: Include prefix-list references in missing policy
                         decision.
                     include_sub_route_map:
                       type: bool
-                      description: Include sub route map references in missing policy
+                      description: Include sub-route-map references in missing policy
                         decision.
                     address_family_all:
-                      description: Include all address families for missing policy
+                      description: Include all address-families for missing policy
                         configuration.
                       type: bool
-                      required: true
+                      default: true
                       valid_values:
                       - true
                 direction_out:
@@ -11156,29 +11159,30 @@ keys:
                   type: dict
                   keys:
                     action:
-                      description: Missing policy action options.
+                      description: Missing policy action.
                       type: str
                       required: true
                       valid_values:
                       - deny
                       - permit
+                      - deny-in-out
                     include_community_list:
                       type: bool
-                      description: Include community list references in missing policy
+                      description: Include community-list references in missing policy
                         decision.
                     include_prefix_list:
                       type: bool
-                      description: Include prefix list references in missing policy
+                      description: Include prefix-list references in missing policy
                         decision.
                     include_sub_route_map:
                       type: bool
-                      description: Include sub route map references in missing policy
+                      description: Include sub-route-map references in missing policy
                         decision.
                     address_family_all:
-                      description: Include all address families for missing policy
+                      description: Include all address-families for missing policy
                         configuration.
                       type: bool
-                      required: true
+                      default: true
                       valid_values:
                       - true
             allowas_in:
