Feat(eos_designs): Allow 'evpn_vlan_bundle' to be set up at tenant level

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
@@ -35,6 +35,12 @@ vlan 90
 vlan 100
    name vlan100
 !
+vlan 110
+   name research1
+!
+vlan 120
+   name research2
+!
 vlan 1008
    name SVI_1
 !
@@ -59,7 +65,15 @@ vlan 1014
 vlan 1015
    name SVI_8
 !
+vlan 1016
+   name SVI_9
+!
+vlan 1017
+   name SVI_10
+!
 vrf instance MGMT
+!
+vrf instance research1
 !
 vrf instance SIT2
 !
@@ -117,6 +131,16 @@ interface Vlan1015
    no shutdown
    vrf SIT3
 !
+interface Vlan1016
+   description SVI_9
+   no shutdown
+   vrf research1
+!
+interface Vlan1017
+   description SVI_10
+   no shutdown
+   vrf research1
+!
 interface Vxlan1
    description evpn_vlan_bundle_VTEP
    vxlan source-interface Loopback1
@@ -129,6 +153,8 @@ interface Vxlan1
    vxlan vlan 80 vni 10080
    vxlan vlan 90 vni 20090
    vxlan vlan 100 vni 20100
+   vxlan vlan 110 vni 10110
+   vxlan vlan 120 vni 10120
    vxlan vlan 1008 vni 21008
    vxlan vlan 1009 vni 21009
    vxlan vlan 1010 vni 21010
@@ -137,12 +163,16 @@ interface Vxlan1
    vxlan vlan 1013 vni 21013
    vxlan vlan 1014 vni 21014
    vxlan vlan 1015 vni 21015
+   vxlan vlan 1016 vni 11016
+   vxlan vlan 1017 vni 11017
+   vxlan vrf research1 vni 654556
    vxlan vrf SIT2 vni 654789
    vxlan vrf SIT3 vni 654555
    vxlan vrf SIT_VRF vni 789654
 !
 ip routing
 no ip routing vrf MGMT
+ip routing vrf research1
 ip routing vrf SIT2
 ip routing vrf SIT3
 ip routing vrf SIT_VRF
@@ -200,6 +230,18 @@ router bgp 65101
       redistribute learned
       vlan 1014-1015
    !
+   vlan-aware-bundle bundle5
+      rd 1.1.1.1:555
+      route-target both 405:555
+      redistribute learned
+      vlan 120,1017
+   !
+   vlan-aware-bundle bundle6
+      rd 1.1.1.1:666
+      route-target both 406:666
+      redistribute learned
+      vlan 110,1016
+   !
    vlan-aware-bundle SIT2
       rd 10.10.0.3:655089
       route-target both 655089:655089
@@ -224,6 +266,13 @@ router bgp 65101
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
+   !
+   vrf research1
+      rd 10.10.0.3:654556
+      route-target import evpn 654556:654556
+      route-target export evpn 654556:654556
+      router-id 10.10.0.3
+      redistribute connected
    !
    vrf SIT2
       rd 10.10.0.3:654789
