issue-3249: removed address_family_all key from schema

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10839,7 +10839,7 @@ keys:
               type: bool
             missing_policy:
               type: dict
-              description: Missing policy configuration.
+              description: Missing policy configuration for all address-families.
               keys:
                 direction_in:
                   description: Missing policy inbound direction.
@@ -10865,13 +10865,6 @@ keys:
                       type: bool
                       description: Include sub-route-map references in missing policy
                         decision.
-                    address_family_all:
-                      description: Include all address-families for missing policy
-                        configuration.
-                      type: bool
-                      default: true
-                      valid_values:
-                      - true
                 direction_out:
                   description: Missing policy outbound direction.
                   type: dict
@@ -10896,13 +10889,6 @@ keys:
                       type: bool
                       description: Include sub-route-map references in missing policy
                         decision.
-                    address_family_all:
-                      description: Include all address-families for missing policy
-                        configuration.
-                      type: bool
-                      default: true
-                      valid_values:
-                      - true
             link_bandwidth:
               type: dict
               keys:
@@ -11121,7 +11107,7 @@ keys:
               type: bool
             missing_policy:
               type: dict
-              description: Missing policy configuration.
+              description: Missing policy configuration for all address-families.
               keys:
                 direction_in:
                   description: Missing policy inbound direction.
@@ -11147,13 +11133,6 @@ keys:
                       type: bool
                       description: Include sub-route-map references in missing policy
                         decision.
-                    address_family_all:
-                      description: Include all address-families for missing policy
-                        configuration.
-                      type: bool
-                      default: true
-                      valid_values:
-                      - true
                 direction_out:
                   description: Missing policy outbound direction.
                   type: dict
@@ -11178,13 +11157,6 @@ keys:
                       type: bool
                       description: Include sub-route-map references in missing policy
                         decision.
-                    address_family_all:
-                      description: Include all address-families for missing policy
-                        configuration.
-                      type: bool
-                      default: true
-                      valid_values:
-                      - true
             allowas_in:
               type: dict
               keys:
