--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -56,11 +56,11 @@ router_bgp:
       missing_policy:
         direction_in:
           action: deny
-          include_prefix_list: True
-          include_community_list: True
+          include_prefix_list: true
+          include_community_list: true
         direction_out:
           action: permit
-          include_community_list: True
+          include_community_list: true
     - name: test-link-bandwidth2
       link_bandwidth:
         enabled: true
@@ -219,11 +219,11 @@ router_bgp:
       missing_policy:
         direction_in:
           action: deny
-          include_prefix_list: True
-          include_community_list: True
+          include_prefix_list: true
+          include_community_list: true
         direction_out:
           action: permit
-          include_community_list: True
+          include_community_list: true
     - ip_address: 192.0.3.3
       remote_as: 65434
       send_community: standard
