--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -153,7 +153,7 @@ keys:
         keys:
           enabled:
             type: bool
-            description: The `enabled` key is mutually exclusive with `url` and `ssl_profile`.
+            required: true
           url:
             type: str
             description: |-
