Refactor: Change the route-maps again

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -379,16 +379,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    set metric 50
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
-   description Advertise local routes towards LAN
-   match route-type local
-!
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
-   description Advertise routes learned from WAN iBGP towards LAN
-   match route-type internal
-!
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 40
-   description Advertise WAN HA prefixes towards LAN
-   match ip address prefix-list PL-WAN-HA-PREFIXES
+   description Permit every other valid route
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
