--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -288,19 +288,17 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    set extcommunity soo 192.168.42.6:404 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
-   description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   description Make routes learned from WAN HA peer less preferred on LAN routers
+   match route-type internal
+   match tag 50
+   set metric 50
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
-   description Advertise routes received from WAN iBGP towards LAN
-   match route-type internal
+   description Permit every other valid route
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.42.6:404 additive
-!
-route-map RM-CONN-2-BGP permit 50
-   match ip address prefix-list PL-WAN-HA-PREFIXES
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
