--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1B.yml
@@ -340,19 +340,7 @@ route_maps:
     - metric 50
   - sequence: 20
     type: permit
-    description: Advertise local routes towards LAN
-    match:
-    - route-type local
-  - sequence: 30
-    type: permit
-    description: Advertise routes learned from WAN iBGP towards LAN
-    match:
-    - route-type internal
-  - sequence: 40
-    type: permit
-    description: Advertise WAN HA prefixes towards LAN
-    match:
-    - ip address prefix-list PL-WAN-HA-PREFIXES
+    description: Permit every other valid route
 - name: RM-EVPN-SOO-IN
   sequence_numbers:
   - sequence: 10
